--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,10 @@
   </dependencies>
 
   <build>
+ 
+  
+  
+  
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
@@ -139,9 +143,15 @@
           <version>3.7.0</version>
         </plugin>
         <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.20.1</version>
-        </plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.20.1</version>
+               <configuration>
+				    <suiteXmlFiles>
+				        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+				    </suiteXmlFiles>
+				</configuration> 
+            </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.0.2</version>
